profilelist1exp/unpackaged/objects/S_P_Vendor_Partner_Information__c.object
<CustomObject>
    <description>This custom object will hold records for Partner Information related to other system authentication processes</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Key_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Key Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Key__c</fullName>
        <label>Integration Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <externalId>true</externalId>
        <label>Partner ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Username__c</fullName>
        <externalId>true</externalId>
        <label>Partner Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Validation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Validation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_P_Vendor_Automation_ID__c</fullName>
        <label>S&amp;P Vendor Automation ID</label>
        <referenceTo>S_P_Vendor_Automation__c</referenceTo>
        <relationshipLabel>S&amp;P Vendor: Partner Information</relationshipLabel>
        <relationshipName>S_P_Vendor_Partner_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACQ</fullName>
                </value>
                <value>
                    <fullName>ACQ CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>ACQ EAST</fullName>
                </value>
                <value>
                    <fullName>ACQ GREAT LAKES</fullName>
                </value>
                <value>
                    <fullName>ACQ KY/TN</fullName>
                </value>
                <value>
                    <fullName>ACQ MIDATLANTIC</fullName>
                </value>
                <value>
                    <fullName>ACQ MIDWEST</fullName>
                </value>
                <value>
                    <fullName>ACQ NORTHEAST</fullName>
                </value>
                <value>
                    <fullName>ACQ SOUTH</fullName>
                </value>
                <value>
                    <fullName>ACQ SOUTHEAST</fullName>
                </value>
                <value>
                    <fullName>ACQUISITION</fullName>
                </value>
                <value>
                    <fullName>ACQUISITION PRIVATE</fullName>
                </value>
                <value>
                    <fullName>ACQ WEST</fullName>
                </value>
                <value>
                    <fullName>AFPAK CHANNEL</fullName>
                </value>
                <value>
                    <fullName>AFPAK CSB</fullName>
                </value>
                <value>
                    <fullName>AFPAK INSIDE LED</fullName>
                </value>
                <value>
                    <fullName>AFPAK OUTSIDE LED</fullName>
                </value>
                <value>
                    <fullName>AFPAK PARTNER LED</fullName>
                </value>
                <value>
                    <fullName>ANDEAN DISTRIBUTION</fullName>
                </value>
                <value>
                    <fullName>AR_PAR_URU</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA PARTNER</fullName>
                </value>
                <value>
                    <fullName>AR-PY-UY DISTI &amp; RETAIL</fullName>
                </value>
                <value>
                    <fullName>AU CHANNEL</fullName>
                </value>
                <value>
                    <fullName>AU CSB</fullName>
                </value>
                <value>
                    <fullName>AU INSIDE LED</fullName>
                </value>
                <value>
                    <fullName>AU OUTSIDE LED</fullName>
                </value>
                <value>
                    <fullName>AU PARTNER LED</fullName>
                </value>
                <value>
                    <fullName>AVIATION and PORTS</fullName>
                </value>
                <value>
                    <fullName>BD CHANNEL</fullName>
                </value>
                <value>
                    <fullName>BD CSB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>S&amp;P Vendor Partner Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_ID__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Partner_Username__c</columns>
        <columns>Country__c</columns>
        <columns>Segment__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SVP #{000000000}</displayFormat>
        <label>S&amp;P Vendor Partner Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Vendor Partner Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>